# rusty-can-fuzzer

./: .gitignore  Cargo.toml  LICENSE  Readme.md  current_compile_errors.txt  wip_can_init.txt  wip_working_inputs_for_messages.txt
assets/: emcy.json  emcy2.json  emcy3.json  pdo.json
src/: can_bus.rs  json_config.rs  main.rs  msg_processor.rs
