[package]
name = "rusty-can-fuzzer"
version = "0.1.0"
authors = ["TheDragonMask <andrew.niven95@gmail.com>", "Boneill3 <boneill3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketcan = "1.7.0"
rand = "0.8.3"
clap = "2.33.0"
chrono = "0.4.19"
ctrlc = "3.1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.2"
